# hikvision_cpp

./: CMakeLists.txt  download.cpp  main.cpp  plate.cpp  speaker.cpp  speaker_lib.cpp  speaker_lib.h  utf8.cpp  utf8.h
